// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponForm should render a coupon even if no known benefitType is supplied 1`] = `
<form
  className="d-flex align-items-center mb-3"
  onSubmit={[Function]}
>
  <span
    className="text-muted"
  >
    Coupon COUPONCODE applied
  </span>
  <button
    className="btn btn-link display-inline p-0 pl-3 border-0"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="submit"
  >
    <span>
      Remove
    </span>
  </button>
</form>
`;

exports[`CouponForm should render a form when there is no coupon 1`] = `
<form
  className="summary-row d-flex align-items-end"
  onSubmit={[Function]}
>
  <div
    className="form-group mb-0 mr-2"
  >
    <label
      className="h6 d-block"
      htmlFor="couponField"
    >
      <span>
        Add coupon code (optional)
      </span>
    </label>
    <input
      aria-describedby=""
      className="form-control"
      defaultValue=""
      id="couponField"
      name="couponField"
      type="text"
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="submit"
  >
    <span>
      Apply
    </span>
  </button>
</form>
`;

exports[`CouponForm should render a percentage value coupon 1`] = `
<form
  className="d-flex align-items-center mb-3"
  onSubmit={[Function]}
>
  <span
    className="text-muted"
  >
    Coupon COUPONCODE applied for 10% off
  </span>
  <button
    className="btn btn-link display-inline p-0 pl-3 border-0"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="submit"
  >
    <span>
      Remove
    </span>
  </button>
</form>
`;

exports[`CouponForm should render an absolute value coupon 1`] = `
<form
  className="d-flex align-items-center mb-3"
  onSubmit={[Function]}
>
  <span
    className="text-muted"
  >
    <span>
      Coupon COUPONCODE applied for 
      <span>
        $10.00
      </span>
       off
    </span>
  </span>
  <button
    className="btn btn-link display-inline p-0 pl-3 border-0"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="submit"
  >
    <span>
      Remove
    </span>
  </button>
</form>
`;
